Refactor user registration and authentication: use dimension resources for widths, rename success layout to welcome, and implement password hashing

--- a/app/src/main/res/layout/lab5_register.xml
+++ b/app/src/main/res/layout/lab5_register.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_size_16"
             android:layout_marginEnd="@dimen/text_size_16"
-            android:width="400dp"
+            android:width="@dimen/width_400"
             android:autofillHints="Email or Phone"
             android:hint="@string/email_or_phone_vi"
             android:layout_marginTop="@dimen/margin_50" />
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_size_16"
             android:layout_marginEnd="@dimen/text_size_16"
-            android:width="400dp"
+            android:width="@dimen/width_400"
             android:autofillHints="Password"
             android:inputType="textPassword"
             android:hint="@string/password_vi"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_size_16"
             android:layout_marginEnd="@dimen/text_size_16"
-            android:width="400dp"
+            android:width="@dimen/width_400"
             android:autofillHints="Password"
             android:inputType="textPassword"
             android:hint="@string/confirm_password_vi"
