--- a/app/src/main/res/layout/lab7_login.xml
+++ b/app/src/main/res/layout/lab7_login.xml
@@ -11,12 +11,6 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/edtEmail"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <EditText
             android:id="@+id/edtUsername"
             android:hint="Username"
             android:inputType="text"
@@ -29,18 +23,7 @@
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <EditText
-            android:id="@+id/edtConfirmPassword"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/btnSignup"
-            android:text="Register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btnLogin"
@@ -48,6 +31,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </LinearLayout>
 
+        <Button
+            android:id="@+id/btnSignup"
+            android:text="Signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
