--- a/app/src/main/res/layout/lab8_login.xml
+++ b/app/src/main/res/layout/lab8_login.xml
@@ -24,6 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <CheckBox
+            android:id="@+id/cbRememberMe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remember me"
+            android:layout_gravity="start"
+            />
 
         <Button
             android:id="@+id/btnLogin"
@@ -35,6 +42,12 @@
         <Button
             android:id="@+id/btnSignup"
             android:text="Signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/btnForgotPassword"
+            android:text="Forgot password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
