--- a/app/src/main/res/layout/lab8_welcome.xml
+++ b/app/src/main/res/layout/lab8_welcome.xml
@@ -62,5 +62,22 @@
             android:contentDescription="Insert_image"
             android:src="@drawable/circle_shape"
             app:tint="#000000" />
+
+        <Button
+            android:id="@+id/btnUpload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Upload Avatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginVertical="500dp"/>
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            />
+
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
