--- a/app/src/main/res/layout/lab8_welcome.xml
+++ b/app/src/main/res/layout/lab8_welcome.xml
@@ -77,7 +77,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"
-            />
+            android:layout_centerHorizontal="true"
+
+            android:layout_marginVertical="600dp"/>
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
